# src/app/api/models.ts
@@ -1,6 +1,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { AdminFreeInvoiceApproveRequest } from './models/admin-free-invoice-approve-request';
 export type { AdminInvitationCodeCreateRequest } from './models/admin-invitation-code-create-request';
 export type { ApiError } from './models/api-error';
 export type { CertificationAnswersRequest } from './models/certification-answers-request';
